[package]
name = "ixgbe-driver"
version = "0.1.1-preview.1"
edition = "2021"
description = "Intel 82599+ 10Gb NIC Driver."
authors = ["KuangjuX <kuangjux@outlook.com>"]
repository = "https://github.com/drivercraft/ixgbe-driver/"
homepage = "https://github.com/drivercraft/ixgbe-driver/"
documentation = "https://drivercraft.github.io/ixgbe-driver/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["driver", "network", "nic", "ixgbe"]
categories = ["device-drivers", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bit_field = "0.10.2"
volatile = "0.3"
core_detect = "1.0.0"

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = ["alloc", "log", "medium-ethernet", "proto-ipv4", "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns"]

[features]
default = []
irq = []
